<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="invalid_email">"Email format is invalid"</string>
    <string name="empty_email">"Email field is empty"</string>
    <string name="empty_password">"Password field is empty"</string>
    <string name="check_internet">"Check internet connection"</string>
    <string name="instructions">Check your email for recovery instructions</string>
    <string name="app_name">Vapor</string>
    <string name="success">Success</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="updating">Updating…</string>
    <string name="create_account">Register</string>
    <string name="signing_in">Signing In…</string>
    <string name="creating_account">Registering…</string>
    <string name="recover_pass">Recover Password</string>
    <string name="recovering_pass">Recovering…</string>
    <string name="forgot_password">Recover Password</string>
    <string name="about">About</string>
    <string name="lower_register">Register</string>
    <string name="lower_sign_in">Sign In</string>
    <string name="send">Send</string>
    <string name="tos">By registering you accept <b>Cloud</b>App’s <u><b>Terms of Service.</b></u></string>
    <string name="title_activity_main">Vapor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="library">Library</string>
    <string name="my_account">My Account</string>

    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="view_as_list">View as list</string>
    <string name="view_as_grid">View as grid</string>

    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="refreshing">Refreshing…</string>
    <string name="set_custom_domain">Set Custom Domain</string>
    <string name="set_custom_domain_homepage">Set Custom Domain Homepage</string>
    <string name="custom_domain_example">example.com or cloud.example.com</string>
    <string name="custom_domain_homepage_example">Redirect visitors to your custom domain\'s root</string>
    <string name="custom_domain_description">Custom domains let you share your files with a URL like <b>example.com/a1b2</b></string>
    <string name="update_domain">Update Domain</string>
    <string name="current_domain">Current Domain:</string>
    <string name="current_domain_homepage">Custom Domain Homepage:</string>
    <string name="custom_domain_homepage">Custom Domain Homepage</string>
    <string name="set_custom_domain_and_homepage">Set Custom Domain and Homepage</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="new_email_address">Enter new email address</string>
    <string name="current_password">Current password</string>
    <string name="new_email_same">New email is the same as the current</string>
    <string name="new_pass_same">New password is the same as the current</string>
    <string name="invalid_email_password">Invalid email and/or password</string>
    <string name="incorrect_email_pass">Incorrect email or password</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="error_contacting_cloudapp">There\'s a problem contacting CloudApp servers</string>
    <string name="error_occurred">An error occurred</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="incorrect_pass">Incorrect password</string>
    <string name="current_email">Current Email</string>
    <string name="account_details_updated">Account Details Updated</string>
    <string name="invalid_address">Invalid web address</string>
    <string name="empty_custom_domain">Empty custom domain</string>
    <string name="empty_custom_domain_homepage">Empty custom domaiin homepage</string>
    <string name="cp_new_password">New password</string>
    <string name="cp_confirm_new_pass">Confirm new password</string>
    <string name="invalid_pass_no_match">The passwords do not match.</string>
    <string name="invalid_new_pass_same_as_old">Your new password cannot match your current password</string>
    <string name="aa_confirm_password">Confirm password</string>
    <string name="update">Update</string>
    <string name="pref_key_sharable_url">shareable_url</string>
    <string name="pref_key_auto_upload_screenshots">auto_upload_screenshots</string>
    <string name="background_sync">background_sync</string>
    <string name="load_more_files">Load more files</string>
    <string name="loading_more_files">Loading files…</string>
    <string name="search_hint">Search files</string>
    <string name="title_activity_upload">Upload</string>
    <string name="upload">Upload File</string>

    <string-array name="nav_drawer_items">
        <item >Recent Files</item>
        <item >Images</item>
        <item >Videos</item>
        <item >Audio</item>
        <item >Text</item>
        <item >Archives</item>
        <item >Bookmarks</item>
        <item >Other</item>
        <item >Trash</item>
    </string-array>

    <string-array name="drawer_submenu_titles">
        <item>SETTINGS</item>
    </string-array>

    <array name="drawer_submenu_icons">
        <item>@drawable/ic_settings_grey</item>
    </array>


    <array name="file_icons_blue">
        <item>@drawable/ic_recent_blue</item>
        <item>@drawable/ic_image_blue</item>
        <item>@drawable/ic_video_blue</item>
        <item>@drawable/ic_audio_blue</item>
        <item>@drawable/ic_text_blue</item>
        <item>@drawable/ic_archive_blue</item>
        <item>@drawable/ic_bookmark_blue</item>
        <item>@drawable/ic_other_blue</item>
        <item>@drawable/ic_trash_blue</item>
    </array>

    <array name="file_icons_white">
        <item>@drawable/ic_recent_white</item>
        <item>@drawable/ic_image_white</item>
        <item>@drawable/ic_video_white</item>
        <item>@drawable/ic_audio_white</item>
        <item>@drawable/ic_text_white</item>
        <item>@drawable/ic_archive_white</item>
        <item>@drawable/ic_bookmark_white</item>
        <item>@drawable/ic_other_white</item>
        <item>@drawable/ic_trash_white</item>
    </array>

    <array name="file_icons_grey">
        <item>@drawable/ic_recent_grey</item>
        <item>@drawable/ic_image_grey</item>
        <item>@drawable/ic_video_grey</item>
        <item>@drawable/ic_audio_grey</item>
        <item>@drawable/ic_text_grey</item>
        <item>@drawable/ic_archive_grey</item>
        <item>@drawable/ic_bookmark_grey</item>
        <item>@drawable/ic_other_grey</item>
        <item>@drawable/ic_trash_grey</item>
    </array>


</resources>
