<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="deadpixel.app.vapor.ui.MainActivity">


    <item android:id="@+id/main_upload"
        android:title="@string/upload"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/main_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_white"
        />

    <item android:id="@+id/main_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"
        android:icon="@drawable/cloud_refresh"/>
<!--
    <item android:id="@+id/main_view_as_list"
        android:title="@string/view_as_list"
        android:showAsAction="ifRoom"

        android:icon="@drawable/ab_action_view_as_list"/>

    <item android:id="@+id/main_view_as_grid"
        android:title="@string/view_as_grid"
        android:showAsAction="ifRoom"

        android:icon="@drawable/ab_action_view_as_grid"/>

    <item android:id="@+id/main_upload"
        android:title="Upload"
        android:showAsAction="ifRoom"

        android:icon="@drawable/ab_action_upload"/>-->
</menu>
