<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ce_container"
    android:background="@null"
    tools:context="deadpixel.app.vapor.fragments.ChangeEmailFragment">

    <include layout="@layout/preference"
        android:id="@+id/layout_pref_current_email"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/field_group"
        android:orientation="vertical"
        android:baselineAligned="false">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:background="@drawable/list_section_divider_holo_light"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:paddingLeft="8dip"
            android:textAllCaps="true"
            android:id="@+id/header"
            android:layout_marginBottom="8dp"
            android:text="@string/change_email_address"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/ce_new_email_field"
            android:layout_gravity="left"
            android:hint="@string/new_email_address"
            android:imeOptions="actionNext"
            android:textColor="@color/primary_text_color"
            android:textColorHighlight="@color/text_highlight_color"
            android:textColorHint="@color/text_hint"
            android:singleLine="true"
            android:nextFocusDown="@+id/ce_pass_field"
            android:shadowColor="@color/white"
            android:background="@drawable/edittext_selector"
            android:padding="10dp"
            android:layout_marginBottom="7dp"
            android:textSize="15dp"
            android:autoText="true"
            android:fontFamily="sans-serif-light"
            android:visibility="visible"
            android:layout_marginRight="8dip"
            android:layout_marginLeft="8dip"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/ce_pass_field"
            android:layout_gravity="left"
            android:hint="@string/current_password"
            android:imeOptions="actionNext"
            android:textColor="@color/primary_text_color"
            android:textColorHighlight="@color/text_highlight_color"
            android:textColorHint="@color/text_hint"
            android:singleLine="true"
            android:nextFocusDown="@+id/ce_change_email"
            android:shadowColor="@color/white"
            android:background="@drawable/edittext_selector"
            android:padding="10dp"
            android:layout_marginBottom="7dp"
            android:textSize="15dp"
            android:autoText="true"
            android:fontFamily="sans-serif-light"
            android:visibility="visible"
            android:layout_marginRight="8dip"
            android:layout_marginLeft="8dip" />

        <deadpixel.app.vapor.libs.TransitionButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/ce_btn_change_email"
            android:layout_gravity="right"
            android:background="@drawable/btn_toggle_selector"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

    </LinearLayout>
</LinearLayout>