<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context="deadpixel.app.vapor.ui.fragments.CustomDomainFragment">

        <include layout="@layout/preference"
            android:id="@+id/layout_pref_custom_domain"
            android:gravity="center_vertical"
            android:background="?android:selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:listPreferredItemHeight"/>

        <include layout="@layout/preference"
            android:id="@+id/layout_pref_custom_homepage"
            android:gravity="center_vertical"
            android:background="?android:selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:listPreferredItemHeight"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/field_group"
        android:orientation="vertical"
        android:baselineAligned="false">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:background="@drawable/list_section_divider_holo_light"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:paddingLeft="8dip"
        android:textAllCaps="true"
        android:id="@+id/header"
        android:text="@string/set_custom_domain_and_homepage"
        />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/custom_domain_description"
            android:paddingStart="18dp"
            android:paddingEnd="8dp"
            android:paddingTop="12dp"
            android:paddingBottom="8dp"
            android:textColor="@color/primary_text_color" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/custom_domain_field"
            android:layout_below="@+id/custom_domain_homepage_field"
            android:layout_gravity="left"
            android:hint="@string/custom_domain"
            android:imeOptions="actionNext"
            android:textColor="@color/primary_text_color"
            android:textColorHighlight="@color/text_highlight_color"
            android:textColorHint="@color/text_hint"
            android:singleLine="true"
            android:nextFocusDown="@id/pass_field"
            android:shadowColor="@color/white"
            android:background="@drawable/edittext_selector"
            android:padding="10dp"
            android:layout_marginBottom="7dp"
            android:textSize="15dp"
            android:autoText="true"
            android:fontFamily="sans-serif-light"
            android:visibility="visible"
            android:layout_marginRight="8dip"
            android:layout_marginLeft="8dip"
            android:inputType="textUri" />






        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_domain_homepage_example"
            android:paddingStart="18dp"
            android:paddingEnd="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/primary_text_color" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/custom_domain_homepage_field"
            android:layout_gravity="left"
            android:hint="@string/custom_domain_homepage"
            android:imeOptions="actionNext"
            android:textColor="@color/primary_text_color"
            android:textColorHighlight="@color/text_highlight_color"
            android:textColorHint="@color/text_hint"
            android:singleLine="true"
            android:nextFocusDown="@id/pass_field"
            android:shadowColor="@color/white"
            android:background="@drawable/edittext_selector"
            android:padding="10dp"
            android:layout_marginBottom="7dp"
            android:textSize="15dp"
            android:autoText="true"
            android:fontFamily="sans-serif-light"
            android:visibility="visible"
            android:layout_marginRight="8dip"
            android:layout_marginLeft="8dip" />

        <deadpixel.app.vapor.libs.TransitionButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/update_domain"
            android:layout_gravity="right"
            android:background="@drawable/btn_toggle_selector"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:visibility="visible"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

    </LinearLayout>
</LinearLayout>